Tests/Bad/undeclared_var.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
endlocals
beginbody
 	read n;
 	n := z + 1;
 	n := n + n;
 	write n;
 endbody
